--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "postcss-normalize": "^8.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.0.3"
   },
