--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"cd backend && nodemon ./bin/www" \"cd frontend && npm start\""
+    "start": "concurrently \"cd backend && nodemon app.js\" \"cd frontend && npm start\""
   },
   "repository": {
     "type": "git",
