--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "node-sass": "^4.13.1",
     "postcss-normalize": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "2.0.3"
+    "react-scripts": "2.0.3",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,9 +23,9 @@
     "extends": "react-app"
   },
   "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+      ">0.2%",
+      "not dead",
+      "not ie <= 11",
+      "not op_mini all"
+	]
 }
